kubernetes/infrastructure/talos1018/storage/longhorn/config/oauth2-proxy.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.2
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://pid.${DOMAIN_LEGACY}
            - --upstream=http://longhorn-frontend:80
            - --http-address=[::]:4180
            - --redirect-url=https://longhorn.${CLUSTER_DOMAIN_LEGACY}/oauth2/callback
            - --email-domain=*
            - --cookie-secure=true
            - --cookie-name=_oauth2_proxy_longhorn
            - --silence-ping-logging=true
            - --code-challenge-method=S256
          ports:
            - name: http
              containerPort: 4180
          livenessProbe:
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ready
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app.kubernetes.io/name: oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: http
