kubernetes/infrastructure/talos1018/storage/longhorn/config/longhorn-ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required "
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: sh-rancher-longhorn.svg
    gethomepage.dev/name: Longhorn
    gethomepage.dev/app: longhorn
    gethomepage.dev/description: Cloud native distributed block storage for Kubernetes
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.${CLUSTER_DOMAIN}
      secretName: longhorn-tls
  rules:
    - host: "longhorn.${CLUSTER_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
